@@ -4,6 +4,7 @@
  - Mark `zview` as a view and as a borrowed range.
  - Save a copy step on string fields in `stream_to`.
  - New helper: `pqxx::value_type<CONTAINER>`.
+ - New concept: `char_buf`, for a buffer of `char`.
 7.5.2
  - **Actual serious bug.**  `blob::read(std::vector<...>)` was broken.
 7.5.1
